Complete django image widget and fixed bug - footer was being cropped on Profile page. Missing div added to template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -283,3 +283,34 @@ body{
     background-color: #d9f3f57e;
     margin-top: 100px;
 }
+
+
+/* Product form */
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+
+}
+
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    border-radius: 0;
+}
